-->

This is the changelog for Calamares. For each release, the major changes and
contributors are listed. Note that Calamares does not have a historical
changelog -- this log starts with version 3.3.0. See CHANGES-3.2 for
the history of the 3.2 series (2018-05 - 2022-08).


# 3.3.0 (unreleased)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Christophe Marin
 - Frede Hundewadt

## Core ##

## Modules ##


# 3.3.0-alpha6 (2023-11-16)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma

 This is a hotfix release because -alpha5 didn't compile,
 and Anke repaired the partition unit-tests when building with Qt6.


# 3.3.0-alpha5 (2023-11-13)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Alejo Fernandez
 - Anke Boersma
 - Christophe Marin
 - Emir Sari
 - Evan James
 - Gaël PORTAY
 - Gecko Linux
 - Jeremy Whiting
 - Neal Gompa

## Core ##
 - Boost::Python is no longer a dependency, Calamares uses a bundled copy
   of pybind11 instead. This speeds up compilation and reducese the
   dependency tree a great deal. You can set `WITH_PYBIND11=OFF` in the
   build to keep Boost::Python and all the binary-compatibility problems
   it entails.
 - Coding style now wants clang-format 15 or 16, but no longer needs astyle.
   There is also a clang-tidy file for additional styling support.
 - Ongoing translation improvements. (thanks Emir)
 - Translations for bqi (Luri), es_AR (Castellano), eo (Esperanto),
   ka (Georgian). In **non-release** builds (e.g. between releases,
   so for developers building directly from git) all translations are
   enabled, even the ones with no translations at all.
 - The logging format in the `session.log` file and on-screen is now
   more similar, although the file contains a lot more per-line information.
 - The INSTALL_CONFIG option has been restored. It is still a terrible