@@ -27,9 +27,8 @@ setRootPassword: true
 doReusePassword: true
 
 passwordRequirements:
-    nonempty: true
-    minLength: -1  # Password at least this many characters
-    maxLength: -1  # Password at most this many characters
+    minLength: -1
+    maxLength: -1
     libpwquality:
         - minlen=0
         - minclass=0
